# video-flow

./: README.md  pyproject.toml
workflow-ai/: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
workflow-ai/proto/: auc_service.proto
workflow-ai/src/workflow_ai/: __main__.py
workflow-ai/src/workflow_ai/config/: __init__.py  settings.py
workflow-ai/src/workflow_ai/grpc/: __init__.py  build.sh
workflow-ai/src/workflow_ai/services/asr/: __init__.py  engine.py  servicer.py
workflow-ai/src/workflow_ai/services/detection/: __init__.py  engine.py  servicer.py
workflow-ai/src/workflow_ai/services/face_feature/: __init__.py  engine.py  servicer.py
workflow-ai/src/workflow_ai/services/ocr/document/: __init__.py  engine.py  servicer.py
workflow-ai/src/workflow_ai/services/ocr/general/: __init__.py  engine.py  servicer.py
workflow-ai/src/workflow_ai/services/ocr/handwriting/: __init__.py  engine.py  servicer.py
workflow-ai/src/workflow_ai/services/ocr/id_card/: __init__.py  engine.py  servicer.py
workflow-ai/tests/: test_config.py
workflow-manager/: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run.sh
workflow-manager/src/workflow_manager/: __init__.py  __main__.py
workflow-manager/src/workflow_manager/api/: __init__.py  dependencies.py
workflow-manager/src/workflow_manager/api/handlers/: __init__.py  job_handler.py  ping.py
workflow-manager/src/workflow_manager/client/: __init__.py  external_api.py
workflow-manager/src/workflow_manager/config/: __init__.py  config.yaml  settings.py
workflow-manager/src/workflow_manager/core/: __init__.py  database.py  models.py  repositories.py  services.py
workflow-manager/src/workflow_manager/grpc/: __init__.py  job_manager.proto  servicer.py
workflow-manager/src/workflow_manager/scheduler/: __init__.py  scheduler.py
workflow-manager/tests/: conftest.py  test_api.py  test_retry.py  test_services.py
workflow-proto/gen-python/: pyproject.toml
workflow-proto/gen-python/src/workflow_proto/: __init__.py  auc_service_pb2.py  base_pb2.py  base_pb2_grpc.py  face_body_detection_pb2_grpc.py  face_process_pb2.py  face_process_pb2_grpc.py  featurePB_pb2.py  id_card_ocr_pb2.py  media_service_pb2_grpc.py  ocr_ehd_warp_pb2.py  ocr_ehd_warp_pb2_grpc.py  ocr_normal_pb2_grpc.py  workflow_manager_pb2.py  workflow_manager_pb2_grpc.py  workflow_worker_pb2.py  workflow_worker_pb2.pyi  workflow_worker_pb2_grpc.py
workflow-worker/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
workflow-worker/docs/: index.md
workflow-worker/docs/guides/: ARCHITECTURE.md  DATA_FLOW.md  DOCKER.md  INTERFACES.md  MODULES.md  SYSTEM_OVERVIEW.md
workflow-worker/scripts/: check_env.py  diagram.py  docker_build.sh  docker_run.sh  fix_nested_types.py  fix_old_imports.py  fix_proto_imports.py  install_deps.sh
workflow-worker/src/workflow_worker/applications/jobs/: data_loader.py  dummy_detection.py  factory.py  model.py  module.py
workflow-worker/src/workflow_worker/applications/jobs/banned_word_detection/: job.py  reporter.py
workflow-worker/src/workflow_worker/applications/jobs/base/: reporter.py
workflow-worker/src/workflow_worker/applications/jobs/card_recognition/: job.py  reporter.py
workflow-worker/src/workflow_worker/applications/jobs/document_recognition/: job.py  reporter.py
workflow-worker/src/workflow_worker/applications/jobs/person_tracking/: job.py  processor.py  reporter.py
workflow-worker/src/workflow_worker/applications/jobs/report/: job.py
workflow-worker/src/workflow_worker/applications/jobs/script_matching/: job.py  reporter.py
workflow-worker/src/workflow_worker/applications/jobs/speech_recognition/: job.py
workflow-worker/src/workflow_worker/applications/modules/: data_loader.py  dummy_detection.py  factory.py
workflow-worker/src/workflow_worker/applications/workflows/: job_runner.py  task_context.py
workflow-worker/src/workflow_worker/domain/entities/: audio.py  dialogue.py  frame.py  human.py  report.py  rule.py  task.py
workflow-worker/src/workflow_worker/infrastructure/: circular_queue.py
workflow-worker/src/workflow_worker/infrastructure/media_stream/: base.py  data_source.py  data_source_ffmpeg.py  data_source_grpc.py  frame_channel.py  model.py  s3_hook.py  s3client.py  stream.py  stream_factory.py  utils.py
workflow-worker/src/workflow_worker/interfaces/api/: README.md  build.sh  clean.sh  media_service.proto  media_service_pb2.py  media_service_pb2.pyi  media_service_pb2_grpc.py  workflow_common.proto  workflow_common_pb2.py  workflow_common_pb2.pyi  workflow_manager_pb2.pyi  workflow_manager_pb2_grpc.py  workflow_worker.proto  workflow_worker_pb2_grpc.py
workflow-worker/src/workflow_worker/interfaces/cli/: worker.py
workflow-worker/src/workflow_worker/interfaces/events/: event_factory.py
workflow-worker/src/workflow_worker/services/ai/: retry.py  service.py
workflow-worker/src/workflow_worker/shared/config/: _config.py
workflow-worker/src/workflow_worker/shared/logging/: _logging.py
workflow-worker/src/workflow_worker/shared/utils/: common.py  debug.py  env.py  frame.py  image_calculator.py  media.py  text.py  visualization.py
workflow-worker/test/: media_test.py
workflow-worker/test/fixtures/: README.md  mock_get_task.json  mock_get_task_banwords.json  mock_get_task_human_tracking.json  mock_get_task_script_match.json  mock_get_task_subtitle.json  mock_job_report.json
(+85 files in other folders)
