[project]
name = "workflow-ai"
version = "0.1.0"
description = "AI inference services for the video-flow pipeline"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "workflow-proto",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "pydantic-settings>=2.6.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
asr = [
    "funasr>=1.0.0",
    "modelscope>=1.14.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

detection = [
    "insightface>=0.7.3",
    "onnxruntime>=1.17.0",
]

face_feature = [
    "insightface>=0.7.3",
    "onnxruntime>=1.17.0",
]

ocr = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

all = [
    "workflow-ai[asr,detection,face_feature,ocr]",
]

[tool.uv.sources]
workflow-proto = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_ai"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
exclude = ["src/**/*_pb2.py", "src/**/*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
