[project]
name = "workflow-worker"
version = "0.1.0"
description = "Video inspection workflow worker with DDD architecture"
readme = "README.md"
requires-python = ">=3.13"

# 核心依赖 - 必需
dependencies = [
    "asyncio>=3.4.3",
    "dynaconf>=3.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "requests>=2.32.0",
    "aiohttp>=3.10.0",
    "typing-extensions>=4.12.0",
    "six>=1.16.0",
    "tqdm>=4.66.0",
    "decorator>=4.4.2",
    "numpy>=2.4.2",
]

# 可选依赖组
[project.optional-dependencies]
# gRPC 和 Protobuf
grpc = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

# 媒体处理
media = [
    "numpy>=2.1.0",
    "opencv-python>=4.10.0",
    "ffmpeg-python>=0.2.0",
    "pillow>=10.0.0",
]

# 存储
storage = [
    "minio>=7.2.0",
]

# 异步支持
async = [
    "janus>=1.0.0",
]

# 数据库
database = [
    "psycopg2-binary>=2.9.0",
]

# Thrift 支持
thrift = [
    "thrift>=0.16.0",
    "thriftpy2>=0.4.16",
]

# 其他工具
tools = [
    "XlsxWriter>=3.1.0",
    "pypinyin>=0.50.0",
    "authlib>=1.3.0",
    "urllib3>=2.2.0",
    "Distance>=0.1.3",
    "matplotlib>=3.9.0",
]

# 开发工具
dev = [
    "black>=24.0.0",
    "pylint>=3.0.0",
    "yapf>=0.40.0",
    "ffmpeg-normalize>=1.2.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# 完整安装（包含所有依赖）
all = [
    "workflow-worker[grpc,media,storage,async,database,thrift,tools]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_worker"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 100

[tool.yapf]
based_on_style = "pep8"
column_limit = 100

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 100
exclude = ["src/**/*_pb2.py", "src/**/*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.basedpyright]
reportImportCycles = false
